headless/scripts/hello.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello
  labels:
    app: hello
  namespace: hs
spec:
  selector:
    app: hello
  ports:
    - name: http
      port: 3000
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: hello-v5
  namespace: hs
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: hello
        version: v5
    spec:
      containers:
        - name: hello
          image: jonas27/hello:v5
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
