headless/scripts/gateway-grpc.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: hs-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: gateway
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: grpc
        protocol: GRPC
      hosts:
        - k8s-demo-grpc.dev.unicareer.com
